--- a/AR/package.json
+++ b/AR/package.json
@@ -18,6 +18,7 @@
     "html-webpack-plugin": "^5.5.0",
     "lil-gui": "^0.16.1",
     "mini-css-extract-plugin": "^2.6.0",
+    "ngrok": "^4.3.3",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "socket.io": "^4.5.1",
