--- a/MERN/frontend/package.json
+++ b/MERN/frontend/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.9.1",
+    "bootstrap-icons": "^1.10.1",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.2.1",
@@ -15,6 +15,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
