--- a/MERN/frontend/package.json
+++ b/MERN/frontend/package.json
@@ -1,23 +1,25 @@
 {
   "name": "frontend",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.10.1",
+    "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.1",
     "js-image-zoom": "^0.7.0",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
-    "react-dom": "^18.2.0",
-    "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
-    "react-simple-star-rating": "^5.1.6",
-    "recharts": "^2.1.16",
+    "react-dom": "^17.0.2",
+    "react-router-bootstrap": "^0.26.1",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "react-simple-star-rating": "^4.0.5",
+    "recharts": "^2.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
