Khoa_37th_Commit

--- a/MERN/backend/.env
+++ b/MERN/backend/.env
@@ -1,1 +1,4 @@
-MONGO_URI=mongodb+srv://anko:<anko>@cluster0.ilx584c.mongodb.net/mern_database?retryWrites=true&w=majority
+# MONGO_URI=mongodb://localhost/mydb?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://anko:AOjHOx5wAV8lV5ez@cluster0.ilx584c.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URI=mongodb+srv://anko:<anko>@cluster0.ilx584c.mongodb.net/mern_database?retryWrites=true&w=majority
+NODE_ENV=development
