--- a/MERN/backend/package.json
+++ b/MERN/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^7.1.0",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
@@ -24,8 +25,10 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "socket.io": "^4.5.1",
     "uuid": "^8.3.2"
   }
 }
