--- a/MERN/frontend/package.json
+++ b/MERN/frontend/package.json
@@ -1,25 +1,32 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/paypal-js": "^5.0.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
-    "jquery": "^3.6.1",
     "js-image-zoom": "^0.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.3.0",
+    "react-redux": "^7.2.8",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-simple-star-rating": "^4.0.5",
+    "react-test-renderer": "^17.0.2",
     "recharts": "^2.1.9",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
