--- a/MERN/frontend/package.json
+++ b/MERN/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "js-image-zoom": "^0.7.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
